# dioxus-type-animation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: accessibility.rs  all_features.rs  basic.rs  custom_splitter.rs  no_cursor.rs  omit_deletion_animation.rs  pre_render_first_string.rs  repeat.rs  sequence_items.rs  speed.rs  wrapper.rs
src/: animation.rs  lib.rs  repeat.rs  sequence.rs  speed.rs  type_animation.rs  wrapper.rs
